--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,91 @@
 
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
+
+html {
+    box-sizing: border-box;
+    background-color: #212529;
+}
+    
+*, *::after, *::before {
+    box-sizing: inherit;
+}
+    
+body {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 600;
+    background-color: #212529;
+}
+    
+.nav-link, .icon-bell {
+    margin-left: 1rem !important;
+}
+.nav-link--active, .icon-bell--active {
+    color: #5aaae2;
+}
+.nav-link--active:hover, .icon-bell--active:hover {
+    color: #fff;
+}
+    
+.img-hover {
+    display: none;
+}
+    
+.navbar-brand:hover .img-hover {
+    display: inline-block !important;
+}
+.navbar-brand:hover .img-not-hover {
+    display: none !important;
+}
+    
+.profile-pic {
+    color: transparent;
+    transition: all 0.3s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    transition: all 0.3s ease;
+}
+.profile-pic input {
+    display: none;
+}
+.profile-pic img {
+    position: absolute;
+    object-fit: cover;
+    width: 150px;
+    height: 150px;
+    box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.35);
+    border-radius: 10px;
+    z-index: 0;
+    border: 5px solid white;
+}
+.profile-pic .-label {
+    cursor: pointer;
+    height: 150px;
+    width: 150px;
+}
+.profile-pic:hover .-label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 10000;
+    color: rgb(250, 250, 250);
+    transition: background-color 0.2s ease-in-out;
+    border-radius: 10px;
+    margin-bottom: 0;
+}
+.profile-pic span {
+    display: inline-flex;
+    padding: 0.2em;
+    height: 2em;
+}
+    
+.upload-btn-wrapper input[type=file] {
+    font-size: 100px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
+}
