--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,9 +17,7 @@ html {
 }
     
 body {
-    font-family: "Montserrat", sans-serif;
     font-weight: 600;
-    background-color: #212529;
 }
     
 .nav-link, .icon-bell {
@@ -93,4 +91,8 @@ body {
     left: 0;
     top: 0;
     opacity: 0;
+}
+
+.main-content-view {
+    min-height:75vh;
 }
