Order by number of reviews / Showing Reviews in each Game / Games Route / Games Info / Small fixes in views

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -96,3 +96,15 @@ body {
 .main-content-view {
     min-height:75vh;
 }
+
+.fill-div {
+    position:relative;
+}
+
+.fill-div-link {
+    z-index: 100;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    text-decoration: none;
+}
