--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -42,6 +42,7 @@ body {
 }
     
 .profile-pic {
+    z-index:1;
     color: transparent;
     transition: all 0.3s ease;
     display: flex;
@@ -60,7 +61,7 @@ body {
     height: 150px;
     box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.35);
     border-radius: 10px;
-    z-index: 0;
+    z-index: 2;
     border: 5px solid white;
 }
 .profile-pic .-label {
@@ -87,6 +88,7 @@ body {
     
 .upload-btn-wrapper input[type=file] {
     font-size: 100px;
+    width:100%;
     position: absolute;
     left: 0;
     top: 0;
